--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -39,13 +39,22 @@
 // Hero
 
 .hero {
-  padding: 80px 0;
-  background-color: #f9f8f3;
+  background: url(/img/hero.webp) no-repeat center center;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  background-size: contain;
+  padding: 20px 0 40px;
+  height: 80vh;
+  // cursor: url('/public/img/cursor.png'),auto;
+  // background-color: #f9f8f3;
 }
 .hero .cta {
   max-width: 600px;
   margin: 0 auto 0;
   padding: 100px 0;
+  cursor: url(/img/cursor.png),auto;
+
 }
 .hero .cta h1 {
   font-size: 50px;
